[package]
name = "conways-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
bitvec = "1.0.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "conways"
harness = false
